<resources>
    <string name="app_name">PPKR Inc.</string>
    <string name="title_activity_post_parking_spot">Post Parking</string>
    <string name="title_activity_parking_maps">Map</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Email address is invalid.</string>
    <string name="error_invalid_password">Password is too short</string>
    <string name="error_incorrect_password">Incorrect Password</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to Updating Car Info -->

    <string name="title_activity_update_car">Update Car Information</string>
    <string name="prompt_make">Select Car Make</string>
    <string name="prompt_model">Select Car Model</string>
    <string name="prompt_year">Input Car Year</string>

    <string name="prompt_plate_optional">License Plate (Optional)</string>
    <string name="prompt_plate_required">License Plate</string>
    <string name="action_update_car_info">Update Car Information</string>

    <string-array name="make_arrays">
        <item>Car Make</item>
        <item>Toyota</item>
        <item>Honda</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
    </string-array>

    <string-array name="model_arrays">
        <item>Car Model</item>
        <item>Malaysia</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
    </string-array>
    <string name="title_activity_home_page">PPKR Inc.</string>
    <string name="title_activity_register_page">User Registration</string>
    <string name="title_activity_forget_pass">Password Reset</string>
    <string name="title_activity_search_parking">Search Parking</string>
    <string name="title_activity_my_account">My Account</string>
    <string name="title_activity_about_us">About Us</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">PPKR</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_csulbmap">Distance To Csulb</string>
    <string name="directionsApiKey">AIzaSyAwUgaGaj5Xy_7PmtSVixPpB_WpV9PAevg</string>

</resources>
