<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".UpdateCar">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/update_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/car_info_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/car_info_update_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <AutoCompleteTextView
                android:id="@+id/year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:completionHint="@string/prompt_year"
                android:hint="@string/prompt_year"
                android:inputType="date"
                android:maxLines="1"
                android:singleLine="true"/>

            <Spinner
                android:id="@+id/car_make_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/make_arrays"
                android:prompt="@string/prompt_make" />

            <Spinner
                android:id="@+id/car_model_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/model_arrays"
                android:prompt="@string/prompt_model" />

            <AutoCompleteTextView
                android:id="@+id/license_plate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:completionHint="@string/prompt_plate_optional"
                android:hint="@string/prompt_plate_required"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"/>

            <Button
                android:id="@+id/update_car"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_update_car_info"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>